[gd_scene load_steps=9 format=2]

[ext_resource path="res://props/textures/bush.png" type="Texture" id=2]
[ext_resource path="res://props/textures/columns.png" type="Texture" id=3]
[ext_resource path="res://props/textures/grass.png" type="Texture" id=4]
[ext_resource path="res://map_pieces/map_piece.gd" type="Script" id=5]
[ext_resource path="res://props/color_tint_shader.tres" type="Shader" id=6]
[ext_resource path="res://tilesets/tileset.tres" type="TileSet" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/color_multiplier = Plane( 1, 1, 1, 1 )
shader_param/color_additive = Plane( 0, 0, 0, 0 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 13 )

[node name="MapPiece" type="YSort"]
material = SubResource( 1 )
z_index = 3
script = ExtResource( 5 )
tilemap_size = Vector2( 4, 7 )

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CollisionArea"]
polygon = PoolVector2Array( 8, 216, 8, 72, 120, 72, 120, 216 )
__meta__ = {
"_edit_lock_": true
}

[node name="SelectionArea" type="Area2D" parent="."]
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SelectionArea"]
polygon = PoolVector2Array( 0, 0, 0, 224, 128, 224, 128, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tilemap" type="Node2D" parent="."]
use_parent_material = true
__meta__ = {
"_edit_lock_": true
}

[node name="WallsLower" type="TileMap" parent="Tilemap"]
use_parent_material = true
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65536, 7, 262144, 65537, 7, 262145, 65538, 7, 262145, 65539, 7, 262146, 131072, 7, 0, 131073, 7, 4, 131074, 7, 1, 131075, 7, 131077, 196608, 7, 0, 196609, 7, 1, 196610, 7, 131076, 196611, 7, 131077, 262144, 7, 131072, 262145, 7, 131076, 262146, 7, 131073, 262147, 7, 5, 327680, 7, 131072, 327681, 7, 131073, 327682, 7, 4, 327683, 7, 5, 393216, 7, 65536, 393217, 7, 65539, 393218, 7, 196612, 393219, 7, 196613 )
__meta__ = {
"_edit_lock_": true
}

[node name="Grass" type="TileMap" parent="Tilemap"]
use_parent_material = true
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 3, 458758, 1, 3, 0, 2, 3, 0, 3, 3, 458759, 65536, 3, 262148, 65537, 3, 393220, 65538, 3, 131073, 65539, 3, 0, 131072, 3, 327684, 131073, 3, 327680, 131074, 3, 458757, 131075, 3, 0, 196608, 3, 0, 196609, 3, 458753, 196610, 3, 327680, 196611, 3, 458755, 262144, 3, 0, 262145, 3, 0, 262146, 3, 262146, 262147, 3, 262147 )
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="TileMap" parent="Tilemap"]
use_parent_material = true
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 131076, 2, 2, 131077, 3, 2, 1, 65536, 2, 327690, 65537, 2, 327686, 65538, 2, 327686, 65539, 2, 9, 131072, 2, 196618, 131073, 2, 327686, 131074, 2, 327686, 131075, 2, 9, 196608, 2, 10, 196609, 2, 327686, 196610, 2, 327686, 196611, 2, 196617, 262144, 2, 262154, 262145, 2, 327686, 262146, 2, 327686, 262147, 2, 9, 327680, 2, 65536, 327681, 2, 196608, 327682, 2, 196612, 327683, 2, 65539 )
__meta__ = {
"_edit_lock_": true
}

[node name="OverlayUpper" type="TileMap" parent="Tilemap"]
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 0
collision_mask = 0
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="OverlayLower" type="TileMap" parent="Tilemap"]
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 0
collision_mask = 0
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Props" type="YSort" parent="."]
use_parent_material = true
__meta__ = {
"_edit_lock_": true
}

[node name="Bush1" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 24, 32 )
texture = ExtResource( 2 )
offset = Vector2( 0, -16 )
region_enabled = true
region_rect = Rect2( 140, 80, 40, 35 )

[node name="Bush2" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 29, 153 )
texture = ExtResource( 2 )
offset = Vector2( 0, -16 )
region_enabled = true
region_rect = Rect2( 9, 74, 47, 42 )

[node name="Bush3" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 64, 153 )
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
region_enabled = true
region_rect = Rect2( 21, 22, 22, 19 )

[node name="Bush4" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 21, 127 )
texture = ExtResource( 2 )
offset = Vector2( 0, -12 )
region_enabled = true
region_rect = Rect2( 81, 21, 27, 25 )

[node name="Bush5" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 100, 31 )
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
region_enabled = true
region_rect = Rect2( 21, 22, 22, 19 )

[node name="Column" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 59, 32 )
texture = ExtResource( 3 )
offset = Vector2( 0, -24 )
region_enabled = true
region_rect = Rect2( 0, 19, 32, 77 )

[node name="StaticBody2D" type="StaticBody2D" parent="Props/Column"]
collision_layer = 512
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Props/Column/StaticBody2D"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Grass1" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 71, 44 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 72, 40, 16, 16 )

[node name="Grass2" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 79, 35 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 8, 104, 16, 16 )

[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="area_exited" from="CollisionArea" to="." method="_on_CollisionArea_area_exited"]
[connection signal="mouse_entered" from="SelectionArea" to="." method="_on_SelectionArea_mouse_entered"]
[connection signal="mouse_exited" from="SelectionArea" to="." method="_on_SelectionArea_mouse_exited"]
